@@ -10,6 +10,7 @@
 - check fqdn of each interface when matching export access list.
 - fix race when setting task done.
 - correct return status from do_mkdir.
+- fix localhost replicated mounts not working.
 
 4/1/2007 autofs-5.0.1 rc3
 -------------------------
